--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1230,7 +1230,7 @@ header .main-menu ul li ul li a{
 
 /*  13  - Contact Us Section
 ----------------------------------------------*/
-.contact-us .contact-input{
+/* .contact-us .contact-input{
     width: 100%;
     border: 1px solid #e4e7e9;
     border-radius: 3px;
@@ -1241,33 +1241,21 @@ header .main-menu ul li ul li a{
     color: #a3a8ab;
     margin-bottom: 20px;
     padding: 10px 15px;
-}
-.contact-us .contact-submit{
+} */
+/* .contact-us .contact-submit{
     text-transform: uppercase;
     padding: 15px 30px;
-}
+} */
 .contact-info{
-    /*background-color: #fff;
+/*   background-color: #fff;
     padding: 30px;
-    border-radius: 3px;*/
+    border-radius: 100px;
+	width: 100%; */
 }
-.info-item1{
+.info-item{
     margin-bottom: 30px;
     overflow: hidden;
-	position: absolute;
-	left: 0%;
-}
-.info-item2{
-    margin-bottom: 30px;
-    overflow: hidden;
-	position: absolute;
-	right: -90%;
-}
-.info-item3{
-    margin-bottom: 30px;
-    overflow: hidden;
-	position: absolute;
-	right: -200%;
+	width: 100%;
 }
 .info-item:last-child{
     margin: 0px;
@@ -1278,28 +1266,29 @@ header .main-menu ul li ul li a{
 }
 .contact-info .icon span{
     display: block;
-    height: 60px;
-    width: 60px;
-    background-color: #f6f6f6;
-    color: #55575d;
+    height: 70px;
+    width: 70px;
+    background-color: #f3f3f4;
+    color: #171717;
     font-size: 36px;
     text-align: center;
 }
 .contact-info .content{
     display: table;
+	
 }
 .contact-info .content h4{
-    font-size: 22px;
-    line-height: 26px;
+    font-size: 20px;
+    line-height: 60px;
     font-weight: 500;
     color: #171717;
     margin: 0px;
 }
 .contact-info .content p{
-    font-size: 16px;
-    line-height: 26px;
+    font-size: 20px;
+    line-height: 60px;
     font-weight: 500;
-    color: #959595;
+    color: #171717;
     margin: 0px;
 }
 #contact_map{
